--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,11 +1,26 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <title><%= title %></title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
-  </head>
-  <body>
-    <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
-  </body>
+<html lang="en">
+
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Document</title>
+  <script>
+    var status = '<%- JSON.stringify(status) %>';
+
+    if (JSON.parse(status) == "verified") {
+      if (confirm("Do u want to login?")) {
+        window.location.href = "http://localhost:3000/";
+      }
+    }
+  </script>
+</head>
+
+<body>
+  <h1>
+    <%= email%>
+  </h1>
+</body>
+
 </html>
