--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,7 +8,6 @@
   <title>Document</title>
   <script>
     var status = '<%- JSON.stringify(status) %>';
-
     if (JSON.parse(status) == "verified") {
       if (confirm("Do u want to login?")) {
         window.location.href = "http://localhost:3000/";
@@ -21,6 +20,11 @@
   <h1>
     <%= email%>
   </h1>
+  <form action="" method="post">
+    <input type="password" name="password" id="password" placeholder="password" /><br />
+    <br />
+    <input type="submit" value="submit" />
+  </form>
 </body>
 
 </html>
