--- a/views/form.ejs
+++ b/views/form.ejs
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <script>
-        const link = `http://localhost:4000/users/reset-password/${id}/${token}`
+        const link = `https://red-gorgeous-bandicoot.cyclic.app/users/reset-password/${id}/${token}`
     </script>
 </head>
 
